--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "heimseiten/contao-article-list-with-css-classes-and-ids-bundle",
-    "description": "Fügt die vergebenen CSS Klassen und IDs in die Artikelliste ein.",
+    "description": "Fügt die vergebenen CSS Klassen und IDs hübsch in die Artikelliste ein.",
     "keywords": [
         "contao",
         "bundle",
