--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "source": "https://github.com/heimseiten/contao-article-list-with-css-classes-and-ids-bundle"
     },
     "require": {
-        "php": "^8.0",
+        "php": "^7.4 || ^8.0",
         "contao/core-bundle": "^4.13 || ^5.0"
     },
     "require-dev": {
